remove comments and update menu form page

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -192,7 +192,7 @@ body p, p.govuk-body-l{
     p, h3, li {
         color: #a94442;
     }
-    // display: none
+     display: none
 }
 .IT-notes-box{
     border: solid 1px #bcdff1;
@@ -204,7 +204,7 @@ body p, p.govuk-body-l{
     p, h3, li {
         color: #31708f;
     }
-    // display: none
+     display: none
 }
 .content-notes-box{
     border: solid 1px#faf2cc;
@@ -216,7 +216,7 @@ body p, p.govuk-body-l{
     p, h3, li {
         color: #8a6d3b;
     }
-    // display: none
+     display: none
 }
 .UR-notes-box{
     border: solid 1px#d0e9c6;
@@ -228,7 +228,7 @@ body p, p.govuk-body-l{
     p, h3, li {
         color: #3c763d;
     }
-    // display: none
+     display: none
 }
 .alt-notes-box{
     border: solid 1px #dddddd;
