fix routing for medical in CBL

--- a/app/views/forms/housing/CBLextra-reason-medical.html
+++ b/app/views/forms/housing/CBLextra-reason-medical.html
@@ -51,14 +51,14 @@ Health, care, social and support needs
         items: [
             {
             value: "yes",
-            text: "Yes"
-            },
-            {
-            value: "no",
-            text: "No",
+            text: "Yes",
             conditional: {
                 html: medicalHtml
               }
+            },
+            {
+            value: "no",
+            text: "No"
             }
         ]
         }) }}
