add lnk to equal opportuninies  - add mention of other living with you on 2 questions - add NI number needed

--- a/app/views/forms/housing/CBLextra-reason-abuse.html
+++ b/app/views/forms/housing/CBLextra-reason-abuse.html
@@ -43,7 +43,7 @@ Health, care, social and support needs
         name: "abuse",
         fieldset: {
             legend: {
-            text: "Do you need to move because you’re being harassed, threatened or abused?",
+            text: "Do you or anyone who will be living with you need to move because you’re being harassed, threatened or abused?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
