--- a/app/views/forms/housing/CBLextra-reason-medical.html
+++ b/app/views/forms/housing/CBLextra-reason-medical.html
@@ -43,7 +43,7 @@ Health, care, social and support needs
         name: "medical",
         fieldset: {
             legend: {
-            text: "Do you have any physical or mental health needs which are affected by your housing circumstances?",
+            text: "Do you or anyone who will be living with you have any physical or mental health needs which are affected by your housing circumstances?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
