--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -28,6 +28,7 @@
             <li>this form takes most people around 30 minutes to 1 hour to complete</li>
             <li>you cannot save the form and go back to it</li>
             <li>you need addresses for the last 5 years for you and for your joint applicant if you have one</li>
+            <li>you need your National Insurance number if you have one</li>
           </ul>
       </p>
 
