--- a/app/views/forms/housing/members-household/member3.html
+++ b/app/views/forms/housing/members-household/member3.html
@@ -6,9 +6,13 @@
 {% endblock %}
 
 {% block content %}
-<a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-l">
+            Members of Household
+          </h1>
+        <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <p class="govuk-body-l">Enter each person who will be living with you.</p>
       <h2 class="govuk-heading-m">
           Member 1:
