--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -19,9 +19,9 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>3/12 evening</strong></li><br>
         <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">CBL</a><br>version for user testing on Monday 10/12 <br><strong class="govuk-tag info">last update:</strong><strong> 7/12 evening</strong></li><br>
-        <li><a href="housing/medical/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Medical priority - for Housing</a><br>possible version<br> <strong class="govuk-tag info">last update:</strong>  <strong>8/12 evening</strong></li><br>
-        <li><a href="equal-opportunities/ethnic-origin.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Equal opportunities</a><br>for illustration<br> <strong class="govuk-tag info">last update:</strong>  <strong>8/12 evening</strong></li><br>
-        <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Members of household - for Housing</a><br>only for illustration - should be one question per page<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li><br>
+        <li><a href="housing/medical/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Medical priority - for Housing</a><br>for illustration only- UNDER CONSTRUCTION<br> <strong class="govuk-tag info">last update:</strong>  <strong>8/12 evening</strong></li><br>
+        <li><a href="equal-opportunities/ethnic-origin.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Equal opportunities</a><br>for illustration only<br> <strong class="govuk-tag info">last update:</strong>  <strong>8/12 evening</strong></li><br>
+        <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Members of household - for Housing</a><br>for illustration only - should be one question per page<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li><br>
       </ul>
 
     </div>
