add more view to medical

--- a/app/views/forms/housing/medical/about-you.html
+++ b/app/views/forms/housing/medical/about-you.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  About you
+  About you -  Medical priority application
 {% endblock %}
 
 {% block content %}
