--- a/app/views/forms/housing/medical/aids-walking.html
+++ b/app/views/forms/housing/medical/aids-walking.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-Walking aids
+Walking aids - Physical health / Mobility
 {% endblock %}
 
 {% block content %}
