--- a/app/views/forms/housing/medical/application-details.html
+++ b/app/views/forms/housing/medical/application-details.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Applications details
+  Application details
 {% endblock %}
 
 {% block content %}
