--- a/app/views/forms/housing/medical/physical-current.html
+++ b/app/views/forms/housing/medical/physical-current.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Physical health - Mobility - Current accommodation
+Current accommodation - Physical health - Mobility
 {% endblock %}
 
 {% block content %}
@@ -21,7 +21,8 @@
             name: "physical-current-acc",
             id: "physical-current-acc",
             label: {
-              text: "How is your current accommodation impacting your physical health / mobility?"
+              text: "How is your current accommodation impacting your physical health / mobility?",
+              classes: 'govuk-!-font-size-24'
             },
             hint: {
               text: "Provide full details"
