--- a/app/views/forms/housing/medical/stairs.html
+++ b/app/views/forms/housing/medical/stairs.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-Stairs
+Stairs - Physical health / Mobility
 {% endblock %}
 
 {% block content %}
