--- a/app/views/forms/housing/medical/disabled.html
+++ b/app/views/forms/housing/medical/disabled.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Mental health
+  Disabled
 {% endblock %}
 
 {% block content %}
@@ -15,13 +15,24 @@
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post" novalidate>
         {% from "radios/macro.njk" import govukRadios %}
+        {% from "textarea/macro.njk" import govukTextarea %}
+
+        {% set moreHtml %}
+        {{ govukTextarea({
+          name: "disabled-details",
+          id: "disabled-details",
+          label: {
+            text: "Tell us why"
+          }
+        }) }}
+        {% endset%}
 
         {{ govukRadios({
-          idPrefix: "mental",
-          name: "mental",
+          idPrefix: "disabled-conditional",
+          name: "disabled",
           fieldset: {
             legend: {
-              text: "Do you have a mental health issue?",
+              text: "Do you consider yourself to be disabled?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -30,21 +41,24 @@
             {
               value: "yes",
               text: "Yes",
-              checked: checked("mental", "yes")
+              checked: checked("disabled", "yes"),
+              conditional: {
+                html: moreHtml
+              }
             },
             {
               value: "no",
               text: "No",
-              checked: checked("mental", "no")
+              checked: checked("disabled", "no")
             }
           ]
         }) }}
-
      
       {% from "button/macro.njk" import govukButton %}
 
       {{ govukButton({
         text: "Continue",
+        href: "/forms/housing/medical/blind.html",
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
       }) }}
       </form>
