--- a/app/views/forms/housing/medical/mental-current.html
+++ b/app/views/forms/housing/medical/mental-current.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Mental health
+Current accommodation - Mental health
 {% endblock %}
 
 {% block content %}
@@ -14,37 +14,26 @@
    
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post" novalidate>
-        {% from "radios/macro.njk" import govukRadios %}
 
-        {{ govukRadios({
-          idPrefix: "mental",
-          name: "mental",
-          fieldset: {
-            legend: {
-              text: "Do you have a mental health issue?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--m"
-            }
-          },
-          items: [
-            {
-              value: "yes",
-              text: "Yes",
-              checked: checked("mental", "yes")
+          {% from "textarea/macro.njk" import govukTextarea %}
+
+          {{ govukTextarea({
+            name: "mental-current-acc",
+            id: "mental-current-acc",
+            label: {
+              text: "How is your current accommodation impacting your mental health?",
+              classes: 'govuk-!-font-size-24'
             },
-            {
-              value: "no",
-              text: "No",
-              checked: checked("mental", "no")
+            hint: {
+              text: "Provide full details"
             }
-          ]
-        }) }}
-
+          }) }}
      
       {% from "button/macro.njk" import govukButton %}
 
       {{ govukButton({
         text: "Continue",
+        href: "/forms/housing/medical/psychiatrist.html",
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
       }) }}
       </form>
