--- a/app/views/forms/housing/medical/mental-details.html
+++ b/app/views/forms/housing/medical/mental-details.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Physical health - Mobility - Details
+  Mental health - Details
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
                 Tell us:
               </label>
               <ul class="govuk-list govuk-list--bullet">
-              <li>the full details of your physical health/mobility difficulties</li>
+              <li>the full details of your mental health difficulties</li>
               <li>the length of time for each medical condition</li>
               </ul>
               <textarea class="govuk-textarea" id="physical-details" name="physical-details" rows="5" aria-describedby="physical-details-hint"></textarea>
@@ -30,7 +30,7 @@
 
       {{ govukButton({
         text: "Continue",
-        href: "/forms/housing/medical/physical-current.html",
+        href: "/forms/housing/medical/mental-current.html",
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
       }) }}
       </form>
