add notes regarding re-wording

--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -79,6 +79,7 @@
       <li><a href="/forms/housing/CBLjoint.html">joint applicant</a></li>
       <li>if there is a joint applicant, we need 5 years of addresses too .....</li>
       <li>we remove the monitor information page and add a link on the last page instead</li>
+      <li>medical and abuse: content change: to you or anyone who will be living with you</li>
     </ul>
   </div>
 
