improve menu form page

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -174,6 +174,9 @@ body p, p.govuk-body-l{
 
 .govuk-tag.info {
     background-color: $erc-logo-blue;
+    text-transform: none;
+    font-family: nta;
+    padding: 5px;
 }
 
 .govuk-tag.red {
