--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -18,7 +18,8 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>3/12 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version for user testing on Monday 10/12 <br><strong class="govuk-tag info">last update:</strong><strong> 7/12 evening</strong></li><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version for user testing on Monday 10/12 <br><strong class="govuk-tag info">last update:</strong><strong> 7/12 evening</strong><br>
+          See the flow of screens used in UR session of Monday 10/12 <a href="{{ asset_path }}/images/CBLflowur1012.pdf" target="_blank">as a PDF</a></li><br>
         <li><a href="housing/medical/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Medical priority - for Housing</a><br>First draft - for illustration only<br> <strong class="govuk-tag info">last update:</strong>  <strong>9/12 afternoon</strong></li><br>
         <li><a href="equal-opportunities/ethnic-origin.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equal opportunities</a><br>First draft - for illustration only<br> <strong class="govuk-tag info">last update:</strong>  <strong>8/12 evening</strong></li><br>
         <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Members of household - for Housing</a><br>First draft - for illustration only - should be one question per page<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li><br>
