add UR tag for CBL

--- a/app/views/forms/housing/CBLhouse-type.html
+++ b/app/views/forms/housing/CBLhouse-type.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing
+            Apply online for council housing <span class="UR-tag amber">amber</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
@@ -48,8 +48,8 @@
         text: "Bungalow"
       },
       {
-        value: "Sheltered housing (If you or your partner are aged 60)",
-        text: "Sheltered housing (If you or your partner are aged 60)"
+        value: "Sheltered housing (If you or your partner are aged 60 or over)",
+        text: "Sheltered housing (If you or your partner are aged 60 or over)"
       },
       {
         value: "Amenity housing (If you or your partner are aged 60 or over or have a disability)",
