--- a/app/views/forms/housing/CBLadd-person1-loop.html
+++ b/app/views/forms/housing/CBLadd-person1-loop.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing
+        Apply online for council housing<span class="UR-tag ok">ok</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <p class="govuk-body-l">Enter each person who will be living with you.</p>
