--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing
+            Apply online for council housing<span class="UR-tag amber">amber</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         {% from "radios/macro.njk" import govukRadios %}
