--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -38,7 +38,7 @@
 
           <h3 class="govuk-heading-m"><a href="/forms/housing/CBLwhat-next.html">What happens next</a></h3> 
 
-          <p>Could you complete our <a href="/forms/equal-opportunities/ethnic-origin.html">Equal Opportunities Questionnaire</a>? (optional)</p>
+          <p>Could you complete our <a href="/forms/equal-opportunities/ethnic-origin.html">Equality and diversity questionnaire</a>? (optional)</p>
 
         <p class="govuk-!-margin-bottom-1">&nbsp;</p>
           <h2 class="govuk-heading-m">Contact</h2>
