--- a/app/views/forms/housing/CBLmonitor.html
+++ b/app/views/forms/housing/CBLmonitor.html
@@ -20,7 +20,7 @@
 <p>We are committed to providing equal opportunities. This means we will make sure that we treat everybody who applies for housing equally.</p> 
 <p>For our policies and procedures to be effective, we need to monitor who uses our services so that we do not discriminate against anyone because of their sex, race,colour, nationality, ethnic background, disability, sexuality or age.</p> 
 <p>We will keep all the information you give us confidential. We will only use it to process your application and to create statistics to see who uses our services.</p> 
-<p>An optional Equal Opportunities Questionnaire is included at the end of this form and we would be grateful if you could complete this. You are not obliged to complete this form and any information you give us will not influence our decision.</p>
+<p>An optional Equality and diversity questionnaire is included at the end of this form and we would be grateful if you could complete this. You are not obliged to complete this form and any information you give us will not influence our decision.</p>
 
         {{ govukButton({
           text: "Continue",
