--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -55,7 +55,7 @@ Privacy
         <li>process financial transactions</li>
         <li>prevent and detect fraud and corruption in the use of public funds</li>
         <li>allow us to carry out statutory functions efficiently and effectively</li>
-        <li>make sure we meet our statutory obligations including those related to diversity and equalities</li>
+        <li>make sure we meet our statutory obligations including those related to diversity and Equality</li>
       </ul>
       <p>We may not be able to provide you with a product or service unless we have enough information, or your
         permission to use it.</p>",
