--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -1,7 +1,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-Equal opportunities - Age
+Age - Equality and diversity
 {% endblock %}
 
 {% block content %}
@@ -9,13 +9,13 @@ Equal opportunities - Age
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Equal opportunities questionnaire
+            Equality and diversity questionnaire
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
         {% from "radios/macro.njk" import govukRadios %}
   
-  
+        <form class="form" method="post">
         {{ govukRadios({
           classes: "govuk-radios",
           idPrefix: "age",
@@ -56,11 +56,15 @@ Equal opportunities - Age
         }) }}
         {{ govukButton({
           text: "Continue",
-          classes: "button-primary",
-          href: "/forms/equal-opportunities/disability.html"
+          classes: "button-primary"
         }) }}
-
-
+      </form>
     </div>
 </div>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>As this might should probably be a general form, I've added 0-15. But if they tick this, then we might want not to show the relationship status question and the one about sexual orientation? might just jump to the religion question instead</li>
+  
+  </div>
 {% endblock %}
