--- a/app/views/forms/equal-opportunities/thankyou.html
+++ b/app/views/forms/equal-opportunities/thankyou.html
@@ -1,7 +1,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-Equal opportunities - Disability
+Thank you - Equality and diversity
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@ Equal opportunities - Disability
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Equal opportunities questionnaire
+            Equality and diversity questionnaire
         </h1>
      
         <div class="govuk-panel govuk-panel--confirmation">
